--- a/website/public/css/theme.css
+++ b/website/public/css/theme.css
@@ -256,6 +256,7 @@ body a:visited {
   color: rgb(49, 71, 92);
   text-align: center;
   font-size: 36px;
+  margin-right: 1rem;
 }
 
 .icon-article a {
