--- a/website/views/users/editClient.ejs
+++ b/website/views/users/editClient.ejs
@@ -23,10 +23,21 @@
 
             <main>
                 <form action="/clients/<%=clientFound.dni%>?_method=PUT" method="POST" enctype="multipart/form-data" class="clientForm">
-
+                    <div class="form-errors">
+                        <% if ( locals.errors !=undefined ) { %>
+                          <p>Uy, algo salio mal revisar:</p>
+                          <ul>
+                            <% for (let i=0; i < errors.length; i++) { %>
+                              <li>
+                                <%= errors[i].msg %>
+                              </li>
+                              <% } %>
+                          </ul>
+                        <% } %>
+                    </div>
                     <div class="registerInput">
                         <label for="firstName">Nombre:
-                            <input type="text" name="firstName" id="firstNombre" placeholder="Ej: Cosme"
+                            <input type="text" name="firstName" id="firstName" placeholder="Ej: Cosme"
                                 value="<%=clientFound.firstName %>">
                         </label>
                     </div>
