--- a/website/views/users/registerClients.ejs
+++ b/website/views/users/registerClients.ejs
@@ -85,8 +85,8 @@
             </label>
           </div>
           <div class="registerInput avatar">
-            <label for="avatar">Foto de Perfil
-              <input type="file" name="avatar" accept=".jpg, .png, .bmp">
+            <label for="avatar">Foto de Perfil (.jpg, .png, .jepg ó .gif)
+              <input type="file" name="avatar" accept=".jpg, .png, .jepg, .gif">
             </label>
           </div>
           <div class="registerInput localidad-list">
