--- a/website/views/users/registerClients.ejs
+++ b/website/views/users/registerClients.ejs
@@ -86,7 +86,7 @@
           </div>
           <div class="registerInput avatar">
             <label for="avatar">Foto de Perfil (.jpg, .png, .jepg ó .gif)
-              <input type="file" name="avatar" accept=".jpg, .png, .jepg, .gif">
+              <input type="file" name="avatar" id="avatarFile" accept=".jpg, .png, .jepg, .gif">
             </label>
           </div>
           <div class="registerInput localidad-list">
