Validacion de Avatar editClient - Frontend (existencia, peso y extension)

--- a/website/views/users/editClient.ejs
+++ b/website/views/users/editClient.ejs
@@ -32,7 +32,7 @@
                     </div>
                     <div class="form-errors">
                         <% if ( locals.errors !=undefined ) { %>
-                            <p>Uy, algo salio mal revisar:</p>
+                            <p>Uy, algo salio mal revisar(lado servidor):</p>
                             <ul>
                                 <% for (let i=0; i < errors.length; i++) { %>
                                     <li>
@@ -86,7 +86,7 @@
                     <div class="registerInput avatar">
                         <label for="avatar">Foto de Perfil (.jpg, .png, .jepg ó .gif)
                             <input src="images/clients/<%=clientFound.avatar%>" type="file" name="avatar"
-                                accept=".jpg, .png, .jpeg, .gif" value="<%=clientFound.avatar%>">
+                                id="avatarFile" accept=".jpg, .png, .jpeg, .gif" value="<%=clientFound.avatar%>">
                         </label>
                     </div>
 
