Validacion Avatar editClient (existencia, peso, extension) y mejoradas las validaciones del resto de los campos

--- a/website/views/users/registerClients.ejs
+++ b/website/views/users/registerClients.ejs
@@ -86,7 +86,7 @@
             </label>
           </div>
           <div class="registerInput avatar">
-            <label for="avatar">Foto de Perfil (.jpg, .png, .jepg ó .gif)
+            <label for="avatar">Foto de Perfil (.jpg, .png, .jpeg ó .gif)
               <input type="file" name="avatar" id="avatarFile" accept=".jpg, .png, .jpeg, .gif">
             </label>
           </div>
@@ -120,7 +120,7 @@
 
       <%- include("../partials/footer") %>
 
-        <script src="/js/clientValidator.js"></script>
+        <!-- <script src="/js/clientValidator.js"></script> -->
 
 </body>
 
