--- a/website/views/users/editClient.ejs
+++ b/website/views/users/editClient.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="/css/desktop-index.css" />
         <title>Soluciones Profesionales</title>
 
-        <script src="/js/editClientValidator.js"></script>
+        <!-- <script src="/js/editClientValidator.js"></script> -->
 
 </head>
 
@@ -55,8 +55,9 @@
                         </label>
                     </div>
                     <div class="registerInput">
-                        <label for="email">Email:
-                            <input type="email" name="email" id="email" value="<%=clientFound.email%>">
+                        <label for="email">Email Guardado: - <%=clientFound.email%> - De querer mantenerlo, cambiar de
+                                pagina, sino escribir uno nuevo:
+                                <input type="email" name="email" id="email" value="">
                         </label>
                     </div>
                     <div class="registerInput">
@@ -84,7 +85,7 @@
                     </div>
 
                     <div class="registerInput avatar">
-                        <label for="avatar">Foto de Perfil (.jpg, .png, .jepg ó .gif)
+                        <label for="avatar">Foto de Perfil (.jpg, .png, .jpeg ó .gif)
                             <input src="images/clients/<%=clientFound.avatar%>" type="file" name="avatar"
                                 id="avatarFile" accept=".jpg, .png, .jpeg, .gif" value="<%=clientFound.avatar%>">
                         </label>
